[metadata]
name = rmm-spoons
license = GPLv3
license_file = LICENSE
author = Michael Ciociola
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spoons/rmm
project_urls =
    Issue Tracker = https://github.com/spoons/rmm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Topic :: System :: Archiving :: Packaging
    Topic :: Games/Entertainment

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires=
    beautifulsoup4
    tabulate
    networkx
    importlib.metadata

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    rmm = rmm.cli:run
